# ocp-rust-ex

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: main.rs
