[package]
name = "ocp_rust_ex"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
tracing = "0.1"
tracing-subscriber = "0.2.25"
itertools = "0.10.1"
tokio = {version = "1.12.0", features = ["full"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
dotenv = "0.15.0"

[dev-dependencies]
pretty_assertions = "1.0.0"