[package]
name = "ocp_rust_ex"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"

hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
futures-util = "0.3"

envy = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"